--- a/kaarel_kivisalu.tex
+++ b/kaarel_kivisalu.tex
@@ -309,6 +309,31 @@ See tähendab, et kõrgetel temperatuuridel ei sõltu süsteemi soojusmahtuvus t
     \end{split}
 \end{align}
 Kui $\beta c \gtrsim 1$, siis avaldise \eqref{mahsum} väärtus on võimalik küllaltki heas lähenduses leida vaadates ainult summade esimesi liikmeid.\footnote{$\beta c =1$ jaoks piisab küllaltki hea täpsuse jaoks mõnesajast liikmest.}
+\begin{figure}[htb]
+    \includegraphics[width=\textwidth]{maxima/m1a1b1T0_1S400_2.pdf}
+    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist.}
+    \allikas{Autori erakogu.}
+\end{figure}
+\begin{figure}[htb]
+    \includegraphics[width=\textwidth]{maxima/m1a1b1T0_1S100.pdf}
+    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist.}
+    \allikas{Autori erakogu.}
+\end{figure}
+\begin{figure}[htb]
+    \includegraphics[width=\textwidth]{maxima/m1a1b1T0_10S100.pdf}
+    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist.}
+    \allikas{Autori erakogu.}
+\end{figure}
+\begin{figure}[htb]
+    \includegraphics[width=\textwidth]{maxima/m1a1b1T0_10S400.pdf}
+    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist.}
+    \allikas{Autori erakogu.}
+\end{figure}
+\begin{figure}[htb]
+    \includegraphics[width=\textwidth]{maxima/m1a1b2T0_1S400.pdf}
+    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist.}
+    \allikas{Autori erakogu.}
+\end{figure}
 
 \section{Tükiti paraboolne potentsiaal}
 
