--- a/kaarel_kivisalu.tex
+++ b/kaarel_kivisalu.tex
@@ -32,29 +32,31 @@ comment=[n][\itshape]{/*}{*/}
 \tableofcontents% Sisukord
 \addchap{Sissejuhatus}
 \nummerdame% See käsk peab olema õigeks nummerdamiseks kohe peale sissejuhatust
-I rahvusvahelisel füüsikaolümpiaadil 1967. aastal oli järgnev probleem \cite{ipho67}:
+I rahvusvahelisel füüsikaolümpiaadil 1967. aastal oli järgnev ülesanne \parencite[6]{ipho67}:
 
 \textit{Kaks homogeenset ühesugust kera on sama algtemperatuuriga. Üks kera on liikumatult horisontaalse tasandil, teine ripub niidi küljes. Mõlemale kerale antakse võrdne soojushulk. Kas kerade lõpptemperatuur on sama või mitte. Soojuskadudega mitte arvestada.}
 
-Käesolevas töös uuritakse konkreetsete potentsiaalide korral konstantse gravitatsioonvälja mõju kera soojusmahtuvusele.
-Konstantse gravitatsioonivälja potentsiaal on lineaarne.
-Vaadatakse soojusmahtuvuse erinevust juhtudel, kui on ainult kera potentsiaal ja kera potentsiaalile on lisatud lineaarne gravitatsioonivälja potentsiaal.
+Käesolevas töös uuritakse konkreetsete potentsiaalide korral konstantse gravitatsioonvälja mõju kerale sarnase, kuid lihtsustatud, süsteemi soojusmahtuvusele.
+Konstantse gravitatsioonivälja potentsiaal on lineaarne ja see selle saab liita süsteemi potentsiaalile.
+Vaadatakse soojusmahtuvuse erinevust juhtudel, kui on ainult süsteemi potentsiaal ja kera potentsiaalile on lisatud lineaarne gravitatsioonivälja potentsiaal.
+Käesolevas töös üritatakse siduda soojusmahtuvust ja süsteemi mikroparameetreid.
 
-Töös on analüüsitud kuuppolünoompotentsiaali häirituse meetodil ja kahest lineaarsest funktsioonist koosnevat potentsiaali kvaasi-klassikaliselt. Samuti on näidatud, et osade potentsiaalide korral ei mõjuta gravitatsioon soojusmahtuvust.
+Töös on analüüsitud kuuppolünoompotentsiaali häirituse meetodil ja tükiti lineaarsestest funktsioonist koosnevat potentsiaali kvaasi-klassikaliselt.
 
-Varem on uuritud gravitatsiooni mõju metallkera soojusmahtuvusele üldjuhul.
+Varem on uuritud gravitatsiooni mõju metallkera soojusmahtuvusele Palma ja Sormani poolt \parencite{palma15}.
 Leiti üldine seos soojusmahtuvuse, temperatuuri, gravitatsioonivälja tugevuse ja lineaarse soojuspaisumisteguri vahel.
-Saadud tulemust on eksperimentaalselt väga raske kinnitada, kuna gravitatsiooni mõju on väga väike. Konkreetsete potentsiaalide läbivaatamine tõstaks ka varem leitud mudeli usaldusväärsust.
+Saadud tulemust on eksperimentaalselt väga raske kinnitada, kuna gravitatsiooni mõju on väga väike.
+%Konkreetsete potentsiaalide läbivaatamine tõstaks ka varem leitud mudeli usaldusväärsust.
 
-Uurimistöö hüpotees on, et sõltuvalt potentsiaalist võib gravitatsioon nii tõsta kui ka langetada keha soojusmahtuvust.
+Uurimistöö hüpotees on, et sõltuvalt valitud potentsiaalist võib gravitatsioonväli nii tõsta kui ka langetada keha soojusmahtuvust.
 \addchap{Tähiste loetelu}
 \chapter{Teoreetiline osa}
 
-\section{Tavapärane lahendus}
+\section{Olümpiaadiülesande algne lahendus}
 
-Tavapärane lahendus põhineb soojuspaisumisega seotud erinevustel. Kerale $A$ soojust andes see paisub ja selle massikese tõuseb. Järelikult peab osa kerale A antavast soojushulgast kuluma kera massikeskme gravitatsioonilise potentsiaalse energia tõstmiseks ja lõpptemperatuur on madalam algsest. Vastupidiselt, kera $B$ massikese langeb soojuspaisumise tõttu ja energiat saadakse juurde, järelikult on kera $B$ lõpptemperatuur kõrgem.
+Algne lahendus põhineb soojuspaisumisega seotud erinevustel. Kerale $A$ soojust andes see paisub ja selle massikese tõuseb. Järelikult peab osa kerale A antavast soojushulgast kuluma kera massikeskme gravitatsioonilise potentsiaalse energia tõstmiseks ja lõpptemperatuur on madalam algsest. Vastupidiselt, kera $B$ massikese langeb soojuspaisumise tõttu ja energiat saadakse juurde, järelikult on kera $B$ lõpptemperatuur kõrgem. \parencite[6-7]{ipho67}
 
-Pannakse ka kirja tavapärasele lahendusele vastavad valemid. Olgu kerade soojusmahtuvus $C_0$ gravitatsioonivälja puudumisel. Tavapärase lahenduse korrale, kui kera A soojendatakse, siis selle massikese tõused $dR=\alpha R \, dT$ võrra, kus $dT$ on temperatuuri tõus, $\alpha$ on soojuspaisumistegur ja $R$ on kera raadius. Kera saab potentsiaalse energia $d\Phi = mg \, dR$, kus $m$ on keha mass ja $g$ on raskuskiirendus. Järelikult, kui soojushulk \(\delta Q\) antakse süsteemile, siis saadakse, et
+Pannakse ka kirja tavapärasele lahendusele vastavad valemid. Olgu kerade soojusmahtuvus $C_0$ gravitatsioonivälja puudumisel. Tavapärase lahenduse korrale, kui kera A soojendatakse, siis selle massikese tõused $dR=\alpha R \, dT$ võrra, kus $dT$ on temperatuuri tõus, $\alpha$ on soojuspaisumistegur ja $R$ on kera raadius. Kera saab potentsiaalse energia $d\Phi = mg \, dR$, kus $m$ on keha mass ja $g$ on raskuskiirendus. Järelikult, kui soojushulk \(\delta Q\) antakse süsteemile, siis saadakse, et \parencite[2-3]{palma15}
 \begin{equation}
     \delta Q = C_0 \, dT + mg \, dR = C_0 \, dT + mg\alpha R \, dT = (C_0 +  mg\alpha R) dT.
 \end{equation}
@@ -68,31 +70,26 @@ Analgoselt saame, et kera \(B\) soojusmahtuvus on
 \end{equation}
 Enamiku materjalide jaoks on \(\alpha > 0\), millest tulenevalt \(C_A>C_B\). Järelikult on tavapärase lahenduse kohaselt kera \(A\) lõpptemperatuur madalam kera \(B\) lõpptemperatuurist.
 
-\section{Tavapärane lahendus ja selle termodünaamika II seaduse rikkumine}
+\section{Algne lahendus rikub termodünaamika II seadust}
 
-Tavapärases lahenduses kaudselt eeldatakse, et keha siseenergia \(U\) ja raadius \(R\) sõltuvad ainult temperatuurist \(T\), mitte aga raskuskiirendusest \(g\). Vaadeltakse järgnevat tsüklit: pall asub horisontaalsel külmal tasandil temperatuuriga \(T_1\); pall ühendatakse soojema reservuaariga, mille temperatuur \(T_2=T_1+dT>T_1\); pall riputatakse nööri külge ja horisontaalne tasand eemaldatakse; pall ühendatakse külma reservuaariga, mille temperatuur on \(T_1\). Selle protsessi kasutegur on tehtud töö ja neeldunud soojuse suhe ning avaldub kujul \cite{palma15}
+Tavapärases lahenduses kaudselt eeldatakse, et keha siseenergia \(U\) ja raadius \(R\) sõltuvad ainult temperatuurist \(T\), mitte aga raskuskiirendusest \(g\). Vaadeltakse järgnevat tsüklit: pall asub horisontaalsel külmal tasandil temperatuuriga \(T_1\); pall ühendatakse soojema reservuaariga, mille temperatuur \(T_2=T_1+dT>T_1\); pall riputatakse nööri külge ja horisontaalne tasand eemaldatakse; pall ühendatakse külma reservuaariga, mille temperatuur on \(T_1\). Selle protsessi kasutegur on tehtud töö ja neeldunud soojuse suhe ning avaldub kujul \parencite[3-5]{palma15}
 \begin{equation}
     \eta = \frac{2mg\alpha R}{C_0+mg\alpha R}.
 \end{equation}
-Kasutegur \(\eta\) ei sõltu \(dT\) suurusest. Termodünaamika teist seadus saab sõastada järgnevalt: iga tsükkel, mis töötab ainult temperatuuride \(T_1\) ja \(T_2\) juures ei saa olla efektiivsem Carnot' tsüklist, mis töötab samade temperatuuride juures. Carnot' tsükli efektiivsus on
+Kasutegur \(\eta\) ei sõltu \(dT\) suurusest. Termodünaamika teist seadus saab sõastada järgnevalt: iga tsükkel, mis töötab ainult temperatuuride \(T_1\) ja \(T_2\) juures ei saa olla efektiivsem Carnot' tsüklist, mis töötab samade temperatuuride juures. Carnot' tsükli efektiivsus on \parencite[3-5]{palma15}
 \begin{equation}
     \eta_{Carnot'} = \frac{dT}{T_2}
 \end{equation}
 Järelikult, kui \(dT\) on piisavalt väike, siis on palliga tsükli kasutegur suurem Carnot' tsükli kasutegurist. Teisisõnu rikub tavapärane lahendus termodünaamika II seadust.
-\begin{figure}[h]
-    \includegraphics[width=0.5\textwidth]{joonis1.pdf}
-    \caption{Probleemi ülesehitus}
-    \allikas{\protect\cite{palma15}}
-    \label{iphojoonis}% Selle järgi viidatakse, see rida peab olema pärast \caption
-\end{figure}
+
+%\begin{figure}[h]
+%    \includegraphics[width=0.5\textwidth]{joonis1.pdf}
+%    \caption{Probleemi ülesehitus}
+%    \allikas{\protect\cite[15]{palma15}}
+%    \label{iphojoonis}% Selle järgi viidatakse, see rida peab olema pärast \caption
+%\end{figure}
 
 \section{Statistiline mehaanika}
-
-Kasutades statistilise mehaanika meetodeid on võimalik leida kera soojusmahtuvuse sõltuvus gravitatsioonist \parencite[test]{palma15}:
-\begin{equation}
-    \frac{\partial C(g,T)}{\partial g} = -mTY \left( \alpha^2 + \frac{\partial \alpha}{\partial T} \right),
-\end{equation}
-kus \(C\) on soojusmahtuvus, \(g\) on raskuskiirenuds, \(m\) on kera mass, \(T\) on kera temperatuur, \(Y\) on massikeskme kõrgus, \(\alpha\) on lineaarne soojuspaisumistegur.
 
 %\section{Schrödingeri võrrand}
 %
@@ -150,6 +147,12 @@ Kombineerides võrrandeid \eqref{keskham} ja \eqref{soojuham} saadakse, et
     C = k T^2 \frac{\partial^2 \ln Z}{\partial \beta^2}
     \label{mahtuvus}
 \end{equation}
+
+Kasutades selles osas saadud seoseid on võimalik leida kera soojusmahtuvuse sõltuvus gravitatsioonist \parencite[10-13]{palma15}:
+\begin{equation}
+    \frac{\partial C(g,T)}{\partial g} = -mTY \left( \alpha^2 + \frac{\partial \alpha}{\partial T} \right),
+\end{equation}
+kus \(C\) on soojusmahtuvus, \(g\) on raskuskiirenuds, \(m\) on kera mass, \(T\) on kera temperatuur, \(Y\) on massikeskme kõrgus, \(\alpha\) on lineaarne soojuspaisumistegur.
 
 
 \section{Kvaasi-klassikaline lähendus}
@@ -257,12 +260,14 @@ Korrutades võrrandi \eqref{terms1} mõlemad pooled $\bra{n^0}$-ga ning kasutade
 
 \chapter{Praktiline osa}
 
-Käesolevas osas leitakse konkreetsetele võimalikele kera potentsiaalidele vastavad soojusmahtuvuse sõltuvused gravitatsioonist, kus gravitatsiooni potentsiaal on võetud lineaarseks sõltuvalt ühest koordinaadist.
-Kuigi tegelik kera potentsiaal on keeruline võib anda konkreetne potentsiaal küllaltki täpse lahendi.
+Kuna olümpiaadiülesandes oleva kera potentsiaal on väga keeriline, siis on vaja soojusmahtuvuse leidmiseks teha lihtsustusi.
+Järgnevalt vaadatakse süsteeme, millest võib mõelda kui kehadest, mis on vedruga kinnitatud pinna külge.
+Vedru siht ühtib gravitatsiooniväljaga.
+Süsteemi potentsiaal sõltub vedru jäikusest.
 
 \section{Tükiti lineaarne potentsiaal}
 Vaadeldakse potentsiaali kujuga
-\begin{equation}
+\begin{equation} \label{linpot}
     V(x)=\begin{cases}
         (-a+mg)x, & x<0,\\
         (b+mg)x, & x\ge0,
@@ -293,7 +298,7 @@ Kui $\beta c\ll 1$, siis saab summa asendada integraaliga ja $n+\frac{1}{2}\appr
     \label{linpart}
 \end{equation}
 Võrrandist \eqref{mahtuvus} ja \eqref{linpart} saadakse, et
-\begin{equation}
+\begin{equation} \label{intmahtuvus}
     C=kT^2 \frac{\partial^2}{\partial \beta^2} \ln \frac{3\sqrt{\pi}}{4(\beta c)^\frac{3}{2}}=-k_BT^2\frac{\partial}{\partial \beta} \frac{3}{2\beta}=\frac{3k_B}{2}
 \end{equation}
 See tähendab, et kõrgetel temperatuuridel ei sõltu süsteemi soojusmahtuvus temperatuurist.
@@ -309,37 +314,76 @@ See tähendab, et kõrgetel temperatuuridel ei sõltu süsteemi soojusmahtuvus t
     \end{split}
 \end{align}
 Kui $\beta c \gtrsim 1$, siis avaldise \eqref{mahsum} väärtus on võimalik küllaltki heas lähenduses leida vaadates ainult summade esimesi liikmeid.\footnote{$\beta c =1$ jaoks piisab küllaltki hea täpsuse jaoks mõnesajast liikmest.}
-\begin{figure}[htb]
+Väärtuste arvutamiseks ja jooniste tegemiseks on kasutanud töö autor programmi Maxima.
+Kasutatud käsklused on toodud välja lisas \hyperref[maximalisa]{1}.
+Joonistel on kõik väärtused SI ühikutes ja $N$ tähistab summeeritud liikmete arvu.
+
+Jooniselt \ref{joon1} on näha, et madalatel temperatuuridel on soojusmahtuvus väikse.
+\marginpar{Kas (osa) jooniseid peaks olema lisades?}
+Gravitatsioonivälja muutus võib nii tõsta kui ka langetada soojusmahtuvust.
+Kuna potentsiaal \eqref{linpot} on mingi kindla $g$ väärtuse jaoks sümmeetriline nullpunkti suhtes, siis nii välja suurendamine kui ka vähendamine mõjutavad soojusmahtuvust samamoodi.
+Jooniselt \ref{joon1} on näha, et soojusmahtuvus on minimaalne teatud temperatuuril, kui potentsiaal \eqref{linpot} on sümmeetriline nullpunktisuhtes, ja kasvab, kui muuta gravitatsioonivälja.
+
+\begin{figure}[htb!]
     \includegraphics[width=\textwidth]{maxima/m1a1b1T0_1S400_2.pdf}
-    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist.}
+    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist tükiti lineaarse potentsiaal korral, kus $a=\SI{1}{N}$, $b=\SI{1}{N}$, $m=\SI{1}{kg}$ ja $N=400$.}
     \allikas{Autori erakogu.}
-\end{figure}
-\begin{figure}[htb]
-    \includegraphics[width=\textwidth]{maxima/m1a1b1T0_1S100.pdf}
-    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist.}
-    \allikas{Autori erakogu.}
-\end{figure}
-\begin{figure}[htb]
-    \includegraphics[width=\textwidth]{maxima/m1a1b1T0_10S100.pdf}
-    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist.}
-    \allikas{Autori erakogu.}
-\end{figure}
-\begin{figure}[htb]
-    \includegraphics[width=\textwidth]{maxima/m1a1b1T0_10S400.pdf}
-    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist.}
-    \allikas{Autori erakogu.}
-\end{figure}
-\begin{figure}[htb]
-    \includegraphics[width=\textwidth]{maxima/m1a1b2T0_1S400.pdf}
-    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist.}
-    \allikas{Autori erakogu.}
+    \label{joon1}
 \end{figure}
 
-\section{Tükiti paraboolne potentsiaal}
-
+Joonis \ref{joon5} erineb joonisest \ref{joon1} b väärtuse poolest.
+On näha, et üldine kuju on mõlemal juhul sama.
+Joonise \ref{joon5} jaoks on sümmeetriatelg nihutatud.
+Tõenäoliselt on sümmeetriatelg alati $g$ sellise väärtuse juures, kus potentsiaal \eqref{linpot} on sümmeetriline nullpunkti suhtes.
+Võrrandist \eqref{linpot} on lihtne näha, et sümmeetria esineb, kui
 \begin{equation}
-    \frac{\sqrt{m} \left( \sqrt{2} {g}^{2} m^2 + {{2}^{\frac{5}{2}}}\, {E_n} a\right)  \arcsin\left( \frac{\sqrt{{{g}^{2}}\, {{m}^{2}}+4 {E_n} a} \sqrt{{{g}^{2}}\, {{m}^{4}}+4 {E_n} a\, {{m}^{2}}}}{{{g}^{2}}\, {{m}^{3}}+4 {E_n} a m}\right) }{4 {{a}^{\frac{3}{2}}}}=\ensuremath{\pi}  \left( n+\frac{1}{2}\right)  \hbar
+    a-mg=b+mg
 \end{equation}
+ehk
+\begin{equation}
+    g=\frac{a-b}{2m}.
+\end{equation}
+
+\begin{figure}[htb!]
+    \includegraphics[width=\textwidth]{maxima/m1a1b2T0_1S400.pdf}
+    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist tükiti lineaarse potentsiaal korral, kus $a=\SI{1}{N}$, $b=\SI{2}{N}$, $m=\SI{1}{kg}$ ja $N=400$.}
+    \allikas{Autori erakogu.}
+    \label{joon5}
+\end{figure}
+
+Joonised \ref{joon3} ja \ref{joon4} erinevad ainult summeeritud liikmete arvu poolest.
+On näha mõlemal joonisel, et madalatel temperatuuridel on soojusmahtuvus väike, tõustes mingi väärtuseni ja siis hakates sümmeetriateljest kaugemal vähenema.
+Kuna maksimaalne väärtus on mõlemal juhul ligikaudu sama avaldise \eqref{intmahtuvus} väärtusega, siis tõenäoliselt on tingitud sümmeetriateljest kaugemal vähenemine summeerimise ebatäpsusest ja tegelikult seda ei esine.
+Seda väidet kinnitab ka täpsemal joonisel (joonis \ref{joon4}) väiksem soojusmahtuvuse vähenemine sümmeetriateljest kaugemal.
+
+\begin{figure}[htb!]
+    \includegraphics[width=0.6\textwidth]{maxima/m1a1b1T0_10S100.pdf}
+    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist tükiti lineaarse potentsiaal korral, kus $a=\SI{1}{N}$, $b=\SI{1}{N}$, $m=\SI{1}{kg}$ ja $N=100$.}
+    \allikas{Autori erakogu.}
+    \label{joon3}
+\end{figure}
+
+\begin{figure}[htb!]
+    \includegraphics[width=0.6\textwidth]{maxima/m1a1b1T0_10S400.pdf}
+    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist tükiti lineaarse potentsiaal korral, kus $a=\SI{1}{N}$, $b=\SI{1}{N}$, $m=\SI{1}{kg}$ ja $N=400$.}
+    \allikas{Autori erakogu.}
+    \label{joon4}
+\end{figure}
+
+%\begin{figure}[htb!]
+%    \includegraphics[width=0.7\textwidth]{maxima/m1a1b1T0_1S100.pdf}
+%    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist tükiti lineaarse potentsiaal korral, kus $a=\SI{1}{N}$, $b=\SI{1}{N}$, $m=\SI{1}{kg}$ ja $N=100$.}
+%    \allikas{Autori erakogu.}
+%    \label{joon2}
+%\end{figure}
+
+
+
+%\section{Tükiti paraboolne potentsiaal}
+%
+%\begin{equation}
+%    \frac{\sqrt{m} \left( \sqrt{2} {g}^{2} m^2 + {{2}^{\frac{5}{2}}}\, {E_n} a\right)  \arcsin\left( \frac{\sqrt{{{g}^{2}}\, {{m}^{2}}+4 {E_n} a} \sqrt{{{g}^{2}}\, {{m}^{4}}+4 {E_n} a\, {{m}^{2}}}}{{{g}^{2}}\, {{m}^{3}}+4 {E_n} a m}\right) }{4 {{a}^{\frac{3}{2}}}}=\ensuremath{\pi}  \left( n+\frac{1}{2}\right)  \hbar
+%\end{equation}
 
 \section{Häiritusega harmooniline ostsillaator}
 
@@ -347,7 +391,10 @@ Siin osas vaadeltakse harmoonilist ostsillaatorit, millele on lisatud kuuphäiri
 
 \subsection{Harmooniline ostsillaator gravitatsiooniväljas}
 
-Selleks, et leida häirituse mõju süsteemile lahendatakse kõigepealt omaväärtusprobleem harmoonilise ostsillatori jaoks gravitatsiooniväljas. Sellele vastav hamiltoonian on
+Selleks, et leida häirituse mõju süsteemile lahendatakse kõigepealt omaväärtusprobleem harmoonilise ostsillatori jaoks gravitatsiooniväljas.
+Järgnev on sarnane tuletuskäiguga tavalise harmoonilise ostsillaatori jaoks, kuid erineb detailide poolest ja seega on siiski siin ära toodud.
+Tavalise harmoonilise ostsillaatori jaoks võib leida tuletuskäigu Shankari materjalist \parencite[202-216]{shankar94}.
+Gravitatsiooniväljas oleva ostsillaatorile vastav hamiltoonian on
 \begin{equation}
     \op[0]{H}=\frac{\op{p}^2}{2m}+\frac{m\omega^2 \op{x}^2}{2} + mg\op{x}=\hbar \omega (A^\dagger A + 1/2)-k_1,
 \end{equation}
@@ -468,18 +515,18 @@ kus
 kus $k_2=g\sqrt{\frac{2m}{\hbar \omega^3}}$.
 Kuna sellele hamiltoniaanile vastava omaväärtusülesande täpselt lahendamine pole tõenäoliselt võimalik, siis kasutatakse häiritusteooriat. Võrrandi \eqref{parand1} järgi on esimene parand omaväärtustele
 \begin{equation}
-    E_n^1=\braket{n|\op[1]{H}|n}=\lambda \left(\frac{\hbar}{2m\omega}\right)^\frac{3}{2} \braket{n|(A^\dagger + A - k_2)^3|n}
+    E_n^1=\braket{n|\op[1]{H}|n}=\lambda \left(\frac{\hbar}{2m\omega}\right)^\frac{3}{2} \braket{n|(A^\dagger + A - k_2)^3|n},
     \label{kuupparand1}
 \end{equation}
 Kuna $A^\dagger$ ja $A$ muudavad omaseisundit, siis peab olema neid hulkliikme $(A^\dagger + A + k_2)^3$ üksliikmes sama palju, et eelnev avaldis poleks null. Seega annavad avaldises \eqref{kuupparand1} nullist erinevad liikmed ainult üksliikmed $-k_2^3$, $-3k_2A^\dagger A$ ja $-3k_2AA^\dagger$. Järelikult
 \begin{align}
     E_n^1&=\lambda \left(\frac{\hbar}{2m\omega}\right)^\frac{3}{2} \braket{n|-k_2^3-3k_2A^\dagger A- 3k_2 A A^\dagger|n} \nonumber \\
     &= -\lambda \left(\frac{\hbar}{2m\omega}\right)^\frac{3}{2} (k_2^3 + 3k_2\sqrt{n}\sqrt{n} + 3k_2\sqrt{n+1}\sqrt{n+1}) \nonumber \\
-    &= -\lambda \left(\frac{\hbar}{2m\omega}\right)^\frac{3}{2} [k_2^3 + 3k_2(2n+1)] \label{uksenergia}
+    &= -\lambda \left(\frac{\hbar}{2m\omega}\right)^\frac{3}{2} [k_2^3 + 3k_2(2n+1)] \label{uksenergia}.
 \end{align}
 Võrranditest \eqref{nullenergia} ja \eqref{uksenergia} saadakse, et
 \begin{equation}
-    E_n \approx \left(n+\frac{1}{2}\right) - k_1 - \lambda \left(\frac{\hbar}{2m\omega}\right)^\frac{3}{2} [k_2^3 + 3k_2(2n+1)]
+    E_n \approx \left(n+\frac{1}{2}\right) - k_1 - \lambda \left(\frac{\hbar}{2m\omega}\right)^\frac{3}{2} [k_2^3 + 3k_2(2n+1)].
     \label{kuupene}
 \end{equation}
 Võrranditest \eqref{part} ja \eqref{kuupene} saadakse, et statistiline summa on
@@ -491,13 +538,35 @@ Tegu on geomeetrilise rea summaga. See koondub järgmisel tingimusel:
     \frac{3}{\sqrt{2}}k_2\lambda \left(\frac{\hbar}{m\omega}\right)^{\frac{3}{2}}<1
 \end{equation}
 või
-\begin{equation}
-    3 \lambda \hbar g < m \omega^3
+\begin{equation} \label{eeldus}
+    3 \lambda \hbar g < m \omega^3.
 \end{equation}
 Selle eelduse kehtimisel on
 \begin{equation}
-    Z=\frac{\exp\left( \beta \left(  \lambda (k_2^3+3k_2)\left(\frac{\hbar}{2m\omega}\right)^{\frac{3}{2}} +k_1 -\frac{1}{2}\right)\right)}{1-\exp \left( \beta\left( 6 k_2 \lambda \left( \frac{\hbar}{2m\omega}\right)^{\frac{3}{2}} - 1 \right)\right)}
+    Z=\frac{\exp\left( \beta \left(  \lambda (k_2^3+3k_2)\left(\frac{\hbar}{2m\omega}\right)^{\frac{3}{2}} +k_1 -\frac{1}{2}\right)\right)}{1-\exp \left( \beta\left( 6 k_2 \lambda \left( \frac{\hbar}{2m\omega}\right)^{\frac{3}{2}} - 1 \right)\right)}.
 \end{equation}
+Siit pole raske leida soojusmahtuvuse avaldist, kuid kuna see on küllaltki pikka ja otseselt sellest valemist pole võimalik järeldusi teha, siis ei hakata seda siin välja tooma.
+
+Kasutades Maxima programmi üritas autor teha graafikuid soojusmahtuvuse sõltuvuse kohta temperatuuris ja gravitatsiooniväljast, kuid $\hbar$ ja $k_B$ tegelike väärtuste korral ei õnnestunud luua ühtegi graafikut.
+See on tõenäoliselt tingitud sellest, et väärtused lähevad liiga väikseks programmi Maxima jaoks.
+Teatud väärtuste (vt joonis \ref{hjoon1} ja \ref{hjoon2}) jaoks õnnestus siiski luua soojusmahtuvuse ja soojusmahtuvuse tuletise gravitatsioonivälja järgi graafikud.
+Graafikute tegemisel on arvestatud, et eeldus \eqref{eeldus} kehtiks.
+Kuna soojusmahtuvus muutub lubatud $g$ muutumispiirkonnas väga vähe, siis on joonise \ref{hjoon2} usaldusväärsus kaheldav ja võib olla tingitud arvutuslikest ebatäpsustest.
+
+
+\begin{figure}[htb!]
+    \includegraphics[width=\textwidth]{maxima/harh1k1m1w1l0001.pdf}
+    \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist häiritusega harmoonilise ostsillaatori jaoks gravitatsiooniväljas, kus $\hbar=1$, $k_B=1$, $m=1$, $\omega=1$ ja $\lambda=\num{1e-3}$.}
+    \allikas{Autori erakogu.}
+    \label{hjoon1}
+\end{figure}
+
+\begin{figure}[htb!]
+    \includegraphics[width=\textwidth]{maxima/dcdgharh1k1m1w1l0001.pdf}
+    \caption{Soojusmahtuvuse tuletise gravitatsioonivälja suhtes sõltuvus gravitatsiooniväljast ja temperatuurist häiritusega harmoonilise ostsillaatori jaoks gravitatsiooniväljas, kus $\hbar=1$, $k_B=1$, $m=1$, $\omega=1$ ja $\lambda=\num{1e-3}$.}
+    \allikas{Autori erakogu.}
+    \label{hjoon2}
+\end{figure}
 
 %\begin{multline}
 %    \frac{2 \left( 6 k_2 \lambda \left(\frac{\hbar}{2m \omega}\right)^\frac{3}{2}-1\right)^{2} \exp\left(\beta  \left( \frac{\left( {{{k_2}}^{3}}+3 {k_2}\right)  \lambda  {{\left( \frac{\hbar }{m \omega }\right) }^{\frac{3}{2}}}}{{{2}^{\frac{3}{2}}}}+ k_1 - \frac{1}{2}\right) +3 \sqrt{2} {k_2} \beta  \lambda  {{\left( \frac{\hbar }{m \omega }\right) }^{\frac{3}{2}}}-2 \beta \right)}{{{\left( 1-{\exp{\frac{3 {k_2} \beta  \lambda  {{\left( \frac{\hbar }{m \omega }\right) }^{\frac{3}{2}}}}{\sqrt{2}}-\beta }}\right) }^{3}}} +\\
@@ -509,9 +578,8 @@ Selle eelduse kehtimisel on
 
 \addchap{Kokkuvõte}
 
-% \nocite{*}
 \printbibliography
-\addchap{Lisa 1 Maxima kood}
+\addchap{Lisa 1 Maxima kood} \label{maximalisa}
 \begin{lstlisting}[language=Maxima, breaklines=true]
 (%i1)	E_n: (3^(2/3)*%pi^(2/3)*(g^2*m^2+b*g*m-a*g*m-a*b)^(2/3)*(2*n+1)^(2/3)*hbar^(2/3))/(2^(5/3)*(b+a)^(2/3)*m^(1/3));
 (E_n)	(3^(2/3)*%pi^(2/3)*(g^2*m^2+b*g*m-a*g*m-a*b)^(2/3)*(2*n+1)^(2/3)*hbar^(2/3))/(2^(5/3)*(b+a)^(2/3)*m^(1/3))
