--- a/kaarel_kivisalu.tex
+++ b/kaarel_kivisalu.tex
@@ -577,6 +577,16 @@ Kuna soojusmahtuvus muutub lubatud $g$ muutumispiirkonnas väga vähe, siis on j
 
 
 \addchap{Kokkuvõte}
+Töös leiti ligikaudsed soojusmahtuvuse avaldised kahe kvantmehaanilise süsteemi jaoks.
+Tükiti lineaarse potentsiaali jaoks gravitatsiooniväljas õnnestus leida, et väga kõrgetel temperatuuridel ei sõltu soojusmahtuvus gravitatsioonivälja tugevusest. Madalatel temperatuuridel leiti, et potentsiaali sümmeetrilisuse tõttu võib soojusmahtuvus nii tõusta kui ka langeda. Häiritusega harmoonilise ostsillaatori jaoks gravitatsiooniväljas ei leitud küll hästi analüüsitavat tulemust ja soojusmahtuvuse sõltuvus gravitatsioonist on kaheldav, kuid selle eest leiti täpne avaldis statistilise summa jaoks, millest pole raske jõuda soojusmahtuvuse avaldiseni.
+
+Hüpotees sai kinnitust, et on võimalik soojusmahtuvust nii suurendada kui ka vähendada.
+
+Tulemuste leidmine osutus ootamatult keeruliseks.
+On väga vähe potentsiaale, mille jaoks on Schrödingeri võrrand analüütiliselt lahenduv.
+Autor ei leidnud ühtegi potentsiaali, milles oleks lineaarselt koordinaadist sõltuv osa ja mille jaoks soojusmahtuvus sõltuks gravitatsioonivälja tugevusest.
+
+Edaspidi tasuks uurida sama teemat, aga teistsuguste potentsiaalide jaoks. Kõige lihtsam oleks ilmselt uurida potentsiaale, mis on analüütiliselt lahenduvad ilma gravitatsioonivälja komponendita, häirituse meetodil.
 
 \printbibliography
 \addchap{Lisa 1 Maxima kood} \label{maximalisa}
